# graphy

./: .gitignore  README.md  aaa.xml  bbb.json  manage.py
.github/workflows/: linter.yml
API/: pyproject.toml  setup.py
API/models/: edge.py  graph.py  node.py
API/src/graphy_api/: __init__.py
BlockVisualizer/: pyproject.toml
BlockVisualizer/src/graphy_block_visualizer/: __init__.py  apps.py  block_visualizer_service.py  views.py
BlockVisualizer/templates/: create_block_graph.html
JsonDataSource/: pyproject.toml
JsonDataSource/src/graphy_json_data_source/: __init__.py  aaa.json  json_data_source_service.py  json_error.py  main.py
Platform/: pyproject.toml
Platform/src/graphy_platform/: platform.py  urls.py  views.py  workspace.py
Platform/templates/: bird_view.html  error_view.html  platform_home.html  tree_view.html
RdfDataSource/: graph01.ttl  pyproject.toml
RdfDataSource/src/graphy_rdf_data_source/: __init__.py  rdf_data_source_service.py
SimpleVisualizer/: pyproject.toml
SimpleVisualizer/src/graphy_simple_visualizer/: __init__.py  apps.py  simple_visualizer_service.py  urls.py  views.py
SimpleVisualizer/templates/: create_graph.html
XmlDataSource/: books.xml  main.py  pyproject.toml
data/: acyclic.xml  big.json  big.xml  carts.json  cyclic.xml  huge.xml  normal.rdf
graphy/: asgi.py  settings.py  urls.py  views.py  wsgi.py
graphy/templates/: platform_home.html
simple_visualizer/: apps.py  urls.py  views.py
simple_visualizer/templates/: create_graph.html
specification/: errors.md
specifikacija/: specifikacija.md
(+21 files in other folders)
